# Solaris

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  mcp.json.example  pyproject.toml
.claude/: settings.json
.cursor/: hooks.json
.githooks/: commit-msg
plugins/: .empty  .gitignore
plugins/aisee/: README.md  manifest.json  mcps.json  revisions.json
plugins/visual-qa/: .gitignore  README.md  manifest.json  mcps.json  revisions.json
solaris/: __init__.py  revisions.json  solaris.agent.md
solaris/migrations/: 0.10.0.md  0.11.0.md  0.12.0.md  0.13.0.md  0.14.0.md  0.15.0.md  0.16.0.md  0.17.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md  README.md  template.md
solaris/rules/: commits.rule.md  safety.rule.md
solaris/skills/: ad-hoc-task.skill.md  create-project.skill.md  develop-project.skill.md  health-check.skill.md  import-plugin.skill.md  import-project.skill.md  install-plugin.skill.md  release.skill.md  self-reflect.skill.md  update-project.skill.md
solaris/spec/: plan-v0.1.0.md  spec-v0.1.0.md  spec-v0.10.0.md  spec-v0.11.0.md  spec-v0.12.0.md  spec-v0.13.0.md  spec-v0.14.0.md  spec-v0.15.0.md  spec-v0.16.0.md  spec-v0.17.0.md  spec-v0.2.0.md  spec-v0.3.0.md  spec-v0.4.0.md  spec-v0.4.1.md  spec-v0.5.0.md  spec-v0.6.0.md  spec-v0.6.1.md  spec-v0.7.0.md  spec-v0.8.0.md  spec-v0.9.0.md  spec-v0.txt
solaris/tests/: test_log_interaction.py  test_mcp_sync.py  test_read_first.py  test_revs.py  test_skill_loader.py  test_toc.py  test_version.py
solaris/tools/: __init__.py  log_interaction.py  mcp_sync.py  toc.py  (+4 more)
(+31 files in other folders)
